--- a/react-native-baby/android/app/src/main/AndroidManifest.xml
+++ b/react-native-baby/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dvastarter"
+    package="com.comama.baby"
     android:versionCode="1"
     android:versionName="1.0">
+
+
+    <!-- 这个权限用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <!-- 这个权限用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -31,6 +37,9 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="ZvAQnBg1UvBkc1ZaNdo733Bccf2U3ZWf"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
