--- a/react-native-baby/android/app/src/main/AndroidManifest.xml
+++ b/react-native-baby/android/app/src/main/AndroidManifest.xml
@@ -1,68 +1,74 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.comama.baby"
-    android:versionCode="1"
-    android:versionName="1.0">
+  package="com.comama.baby"
+  android:versionCode="1"
+  android:versionName="1.0">
 
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <!-- 这个权限用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-    <!-- 这个权限用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+  <!-- 访问GPS定位 -->
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <!-- 网络定位-->
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  //获取设备网络状态，禁用后无法获取网络状态
+  <uses-permission android:name="android.permission.INTERNET" />
+  //网络权限，当禁用后，无法进行检索等相关业务
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  //获取设备的网络状态，鉴权所需网络代理
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  //允许sd卡写权限，需写入地图数据，禁用后无法显示地图
+  <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+  //获取统计数据
+  <uses-permission android:name="android.permission.GET_TASKS" />
+  //鉴权所需该权限获取进程列表
+  <uses-permission android:name="android.permission.CAMERA" />
+  //使用步行AR导航，配置Camera权限
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    //获取设备网络状态，禁用后无法获取网络状态
-    <uses-permission android:name="android.permission.INTERNET" />
-    //网络权限，当禁用后，无法进行检索等相关业务
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    //获取设备的网络状态，鉴权所需网络代理
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    //允许sd卡写权限，需写入地图数据，禁用后无法显示地图
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    //获取统计数据
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    //鉴权所需该权限获取进程列表
-    <uses-permission android:name="android.permission.CAMERA" />
-    //使用步行AR导航，配置Camera权限
+  <uses-sdk
+    android:minSdkVersion="16"
+    android:targetSdkVersion="22" />
 
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="22" />
+  <application
+    android:name=".MainApplication"
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@style/AppTheme">
+    <meta-data
+      android:name="com.baidu.lbsapi.API_KEY"
+      android:value="ZvAQnBg1UvBkc1ZaNdo733Bccf2U3ZWf" />
 
-    <application
-      android:name=".MainApplication"
-      android:allowBackup="true"
+    <activity
+      android:name=".MainActivity"
+      android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="ZvAQnBg1UvBkc1ZaNdo733Bccf2U3ZWf"/>
-      <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-        android:windowSoftInputMode="adjustResize">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-      </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-        <activity
-            android:name="com.alipay.sdk.app.H5PayActivity"
-            android:configChanges="orientation|keyboardHidden|navigation"
-            android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
-        <activity
-            android:name="com.alipay.sdk.auth.AuthActivity"
-            android:configChanges="orientation|keyboardHidden|navigation"
-            android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
-    </application>
+      android:windowSoftInputMode="adjustResize">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+    <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    <activity
+      android:name=".wxapi.WXEntryActivity"
+      android:exported="true"
+      android:label="@string/app_name" />
+    <activity
+      android:name=".wxapi.WXPayEntryActivity"
+      android:exported="true"
+      android:label="@string/app_name" />
+    <activity
+      android:name="com.alipay.sdk.app.H5PayActivity"
+      android:configChanges="orientation|keyboardHidden|navigation"
+      android:exported="false"
+      android:screenOrientation="behind"></activity>
+    <activity
+      android:name="com.alipay.sdk.auth.AuthActivity"
+      android:configChanges="orientation|keyboardHidden|navigation"
+      android:exported="false"
+      android:screenOrientation="behind"></activity>
+  </application>
 
 </manifest>
