--- a/react-native-baby/android/app/build.gradle
+++ b/react-native-baby/android/app/build.gradle
@@ -106,6 +106,20 @@ android {
       abiFilters "armeabi-v7a", "x86"
     }
   }
+  signingConfigs {
+    release {
+      storeFile file("../keystores/baby.keystore")
+      storePassword "123456"
+      keyAlias "baby"
+      keyPassword "123456"
+    }
+    debug {
+      keyAlias 'baby'
+      keyPassword '123456'
+      storeFile file('../keystores/baby.keystore')
+      storePassword '123456'
+    }
+  }
   splits {
     abi {
       reset()
@@ -118,6 +132,10 @@ android {
     release {
       minifyEnabled enableProguardInReleaseBuilds
       proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+      signingConfig signingConfigs.release
+    }
+    debug {
+      signingConfig signingConfigs.debug
     }
   }
   // applicationVariants are e.g. debug, release
