--- a/react-native-baby/android/app/build.gradle
+++ b/react-native-baby/android/app/build.gradle
@@ -95,13 +95,13 @@ def enableProguardInReleaseBuilds = false
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  buildToolsVersion '23.0.1'
   defaultConfig {
     applicationId 'com.comama.baby'
     minSdkVersion 16
     targetSdkVersion 22
-    versionCode 1
-    versionName "1.0.6"
+    versionCode 6
+    versionName '1.0.6'
     ndk {
       abiFilters "armeabi-v7a", "x86"
     }
